syntax = "proto3";

package service;

option go_package = "/service";

service TaskProto {
  rpc Create (CreateTaskRequest) returns (CreateTaskResponse);
  rpc List (ListTaskRequest) returns (ListTaskResponse);
  rpc Details (DetailsTaskRequest) returns (DetailsTaskResponse);
  rpc Update (UpdateTaskRequest) returns (UpdateTaskResponse);
}

message CreateTaskRequest {
  string title = 1;
  optional string description = 2;
  optional string dueDate = 3;
}

message CreateTaskResponse {
  int32 task_id = 1;
  Task task = 2;
}

message ListTaskRequest {
}

message ListTaskResponse {
  repeated Task tasks = 1;
}

message DetailsTaskRequest {
  int32 task_id = 1;
}

message DetailsTaskResponse {
  Task task = 1;
}

message UpdateTaskRequest {
  int32 task_id = 1;
  optional string new_title = 2;
  optional string new_description = 3;
  optional string new_due_date = 4;
  optional TaskStatus new_status = 5;
}

message UpdateTaskResponse {
  Task task = 1;
}

message Task {
  int32 task_id = 1;
  string title = 2;
  string description = 3;
  string dueDate = 4;
  TaskStatus status = 5;
}

enum TaskStatus {
  UNKNOWN = 0;
  NOT_STARTED = 1;
  IN_PROGRESS = 2;
  BLOCKED = 3;
  COMPLETE = 4;
}
